[package]
name = "es-data-add"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
elasticsearch = "8.5.0-alpha.1"
futures = "0.3.29"
log = "0.4.20"
log4rs = "1.2.0"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
uuid = {  version = "1.6.1", features = ["v4"] }
